--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,8 +57,8 @@ jobs:
           name: PlayerTube Firefox Build
           path: ${{ github.workspace }}/PlayerTube-Firefox
       ## Chrome
-      - name: Upload the Chrome build to the "Artifacts" tab
+      - name: Upload the Chromium build to the "Artifacts" tab
         uses: actions/upload-artifact@v3.1.3
         with:
-          name: PlayerTube Chrome Build
+          name: PlayerTube Chromium Build
           path: ${{ github.workspace }}/PlayerTube-Chrome
