--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
     "name": "PlayerTube",
-    "description": "Try to recreate all the old YouTube player looks.",
+    "description": "The secret ingredient for a older (and better) looking YouTube.",
     "version": "1.0",
     "homepage_url": "https://github.com/ktg5/PlayerTube",
 
