--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
 
     "content_scripts": [
         {
-            "matches": ["*://*.youtube.com/*"],
+            "matches": ["<all_urls>"],
             "js": ["setup.js"],
             "run_at": "document_start"
         },
@@ -32,7 +32,6 @@
     }],
 
     "permissions": [
-        "activeTab",
         "storage"
     ]
 }
