--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 3,
     "name": "PlayerTube",
     "description": "The secret ingredient for a older (and better) looking YouTube.",
-    "version": "1.1",
+    "version": "1.2",
     "homepage_url": "https://github.com/ktg5/PlayerTube",
 
     "background": {
@@ -16,7 +16,7 @@
 
     "content_scripts": [
         {
-            "matches": ["<all_urls>"],
+            "matches": ["*://*.youtube.com/*"],
             "js": ["setup.js"],
             "run_at": "document_start"
         },
