--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 3,
     "name": "PlayerTube",
     "description": "The secret ingredient for a older (and better) looking YouTube.",
-    "version": "1.2",
+    "version": "1.2.1",
     "homepage_url": "https://github.com/ktg5/PlayerTube",
 
     "background": {
@@ -16,13 +16,15 @@
 
     "content_scripts": [
         {
-            "matches": ["*://*.youtube.com/*"],
+            "matches": ["*://*.youtube.com/*", "*://*.youtube.com/embed/*"],
             "js": ["setup.js"],
-            "run_at": "document_start"
+            "run_at": "document_start",
+            "all_frames": true
         },
         {
-            "matches": ["*://*.youtube.com/*"],
-            "js": ["main.js"]
+            "matches": ["*://*.youtube.com/*", "*://*.youtube.com/embed/*"],
+            "js": ["main.js"],
+            "all_frames": true
         }
     ],
 
