everything is gettin' better (v1.3)
We're on the Chrome web-store now btw!!!

* Fixed an Firefox issue with 2010 theme.
* Fixed 3rd-party CSS not loading on 2012 & 2010 themes.
* Added a toggle for the "Heat Map" ontop of the progress bar. (Aka the transparent hills that shows you the most replayed moments in the current video)
* Improved the text area for the user's config.
* Better color picker for custom theme settings.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
 
       # Run the "build.js" script through our newly acquired Node.js environment.
       - name: Run the build node script
-        run: node build.js
+        run: node build
 
       # Unzip stuffs.
       - name: Unzip extension
