--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
 
       # Run the "src/build.js" script through our newly acquired Node.js environment.
       - name: Run the build node script
-        run: node src/build
+        run: npm start
 
       # Unzip stuffs.
       - name: Unzip extension
