--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "doc": "docs"
   },
   "scripts": {
-    "start": "node build.js",
+    "start": "node src/build.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
