--- a/.github/ISSUE_TEMPLATE/other_extensions_3rd-party_bug_.yaml
+++ b/.github/ISSUE_TEMPLATE/other_extensions_3rd-party_bug_.yaml
@@ -43,6 +43,6 @@ body:
   - id: browser-info
     type: textarea
     attributes:
-      label: Browser / Extension information.
+      label: Browser & Extension information (& video if shown).
     validations:
       required: true
