--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -37,6 +37,6 @@ body:
   - id: browser-info
     type: textarea
     attributes:
-      label: Browser / Extension information.
+      label: Browser & Extension information (& video if shown).
     validations:
       required: true
