--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Install action-zip
         uses: montudor/action-zip@v1.0.0
 
-      # Run the "src/build.js" script through our newly acquired Node.js environment.
+      # Run the "build.js" script through our newly acquired Node.js environment.
       - name: Run the build node script
         run: npm start
 
