still working on V3 stuff
been having a very difficult time with this part of the development process, and also i've been working on other projects too. hopefully i can finish this sometime this week.

--- a/manifest.json
+++ b/manifest.json
@@ -47,7 +47,7 @@
 
     "web_accessible_resources": [{
         "matches": ["*://*.youtube.com/*"],
-        "resources": ["css/*", "src/*", "img/*"]
+        "resources": ["css/*", "src/*", "img/*", "v3elmnts.json"]
     }],
 
     "permissions": [
