--- a/manifest.json
+++ b/manifest.json
@@ -31,34 +31,22 @@
             "matches": ["*://*.youtube.com/*"],
             "js": ["src/pt-main.js"]
         },
-        
-        {
-            "matches": ["*://www.youtube-nocookie.com/embed/*"],
-            "js": ["src/pt-setup.js"],
-            "run_at": "document_start",
-            "all_frames": true
-        },
-        {
-            "matches": ["*://www.youtube-nocookie.com/embed/*"],
-            "js": ["src/pt-main.js"],
-            "all_frames": true
-        },
 
         {
-            "matches": ["*://*.youtube.com/embed/*"],
+            "matches": ["*://*.youtube.com/embed/*", "*://*.youtube-nocookie.com/embed/*"],
             "js": ["src/pt-setup.js"],
             "run_at": "document_start",
             "all_frames": true
         },
         {
-            "matches": ["*://*.youtube.com/embed/*"],
+            "matches": ["*://*.youtube.com/embed/*", "*://*.youtube-nocookie.com/embed/*"],
             "js": ["src/pt-main.js"],
             "all_frames": true
         }
     ],
 
     "web_accessible_resources": [{
-        "matches": ["*://*.youtube.com/*", "*://www.youtube-nocookie.com/*"],
+        "matches": ["*://*.youtube.com/*", "*://*.youtube-nocookie.com/*"],
         "resources": ["css/*", "src/*", "img/*", "v3elmnts.json"]
     }],
 
